@startuml it_polimi_ingsw_server_model_component
' Generated by tools/uml/generate-detailed.py. Do not edit by hand.
!pragma layout smetana
skinparam shadowing false
skinparam classAttributeIconSize 0
title it.polimi.ingsw.server.model.component

class BatteryComponent {
  -tile : Tile
  -rotation : Rotation
  -charges : int
  --
  +tile() : Tile
  +rotation() : Rotation
  +capacity() : int
  +charges() : int
  +isEmpty() : boolean
  +fill() : void
  +spend() : void
  +drain() : void
  +scrapped() : void
}
class CabinComponent {
  -HUMAN_CAPACITY : int
  -tile : Tile
  -rotation : Rotation
  -humans : int
  -alien : AlienColor
  --
  +tile() : Tile
  +rotation() : Rotation
  +isStartingCabin() : boolean
  +canHostAlien() : boolean
  +humans() : int
  +alien() : Optional<AlienColor>
  +crewCount() : int
  +isEmpty() : boolean
  +boardHumans() : void
  +boardAlien() : void
  +removeOne() : void
  +evacuate() : void
  +scrapped() : void
}
class CannonComponent <<record>> {
  +muzzleDirection() : Direction
  +needsCharge() : boolean
  +facesForward() : boolean
  +firepowerHalves() : int
}
class CargoHoldComponent {
  -tile : Tile
  -rotation : Rotation
  -cubes : List<GoodColor>
  --
  +tile() : Tile
  +rotation() : Rotation
  +capacity() : int
  +isSpecial() : boolean
  +contents() : List<GoodColor>
  +load() : int
  +isFull() : boolean
  +accepts() : boolean
  +store() : void
  +remove() : void
  +mostValuable() : Optional<GoodColor>
  +jettisonAll() : void
  +scrapped() : void
}
class ComponentTile <<record>> {
  +sidesOf() : Map<Direction, Connector>
}
class Components {
  +require() : void
}
class EngineComponent <<record>> {
  +exhaustDirection() : Direction
  +needsCharge() : boolean
  +power() : int
}
class LifeSupportComponent <<record>> {
  +supports() : AlienColor
}
class ShieldComponent <<record>> {
  +covered() : Set<Direction>
  +covers() : boolean
}
interface ShipComponent {
  +tile() : Tile
  +rotation() : Rotation
  +id() : String
  +kind() : ComponentKind
  +connectorFacing() : Connector
  +scrapped() : void
  +place() : ShipComponent
}
class StartingCabinTile <<record>> {
  +kind() : ComponentKind
  +capacity() : int
}
class StructuralComponent <<record>> {
}
interface Tile {
  +id() : String
  +kind() : ComponentKind
  +connectors() : Map<Direction, Connector>
  +capacity() : int
  +connectorFacing() : Connector
  +exhaustDirection() : Direction
  +muzzleDirection() : Direction
  +shieldedSides() : Set<Direction>
}

ShipComponent <|.. BatteryComponent
ShipComponent <|.. CabinComponent
ShipComponent <|.. CannonComponent
ShipComponent <|.. CargoHoldComponent
Tile <|.. ComponentTile
ShipComponent <|.. EngineComponent
ShipComponent <|.. LifeSupportComponent
ShipComponent <|.. ShieldComponent
Tile <|.. StartingCabinTile
ShipComponent <|.. StructuralComponent
@enduml
